# dns-fabric

./: .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  AGENTS.md  KEA_FABRIC_UI_GAP_ACTIONS.md  KEA_FABRIC_UI_REFACTOR_GAPS.md  README.md  UI_ENGINE_PLAN.md  UI_ENGINE_REVIEW.md  UI_ENGINE_SPEC.md  cspell.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.cursor/plans/: Service_V2_discovery_observability.plan.md  (+4 more)
.fabric-data/: dashboard-layouts.json  dashboard-layouts.orig.json
.githooks/: commit-msg
.github/: dependabot.yml
architecture/: README.md  api.md  concurrency-model.md  config.md  contracts.md  core-runtime.md  dashboard-plugin-blueprint.md  data-governance.md  deployment.md  discovery.md  events.md  future-considerations.md  glossary.md  i18n.md  kea-integration.md  packaging.md  performance.md  platform-support.md  principles.md  product-roadmap.md  reference-ledger.md  testing.md  ui-assets.md  ui-design-system.md  ui-fonts.md  ui-icons.md  ui.md  versioning.md
docs/: README.md  operator-demo.md
scripts/: check_app.sh  check_cspell.sh  check_git_archive_excludes_ref_only.sh  check_layout_parity.py  check_markdownlint.sh  check_openapi_drift.py  check_release_artifacts.py  check_ui_plugin_dashboard_imports.sh  check_ui_plugin_guard.sh  check_ui_plugin_no_gateway_poll.sh  compile_python_tree.sh  dev_serve_with_examples.sh  export_openapi.py  scaffold_plugin.py  validate_specs.py
tests/: test_api_v1.py  test_event_stream_topics.py  test_kefabric.py  test_services_split.py  test_structured_logging.py
(+596 files in other folders)
