[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kea-fabric"
version = "0.1.0"
description = "Management plane for ISC Kea DHCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kea-fabric-api = "kea_fabric.api.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.11",
    "pyyaml>=6",
    "fastapi>=0.115",
    "httpx>=0.28",
    "uvicorn[standard]>=0.32",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2",
    "pymdown-extensions>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["kea_fabric"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["kea_fabric", "tests"]
